--- a/perkenalan diri.html
+++ b/perkenalan diri.html
@@ -95,7 +95,7 @@
         <a href="https://onecompiler.com/html/44dctkfq5" target="_blank">Klik di sini</a>
       </li>
       <li>Tugas Semester 1 Fajar :
-        <a href="https://onecompiler.com/html/44dcueug3" target="_blank">Klik di sini</a>
+        <a href="fajar s1.html">Klik di sini</a>
       </li>
     </ul>
   </div>
@@ -162,4 +162,5 @@
 </script>
 
 </body>
+
 </html>
