--- a/perkenalan diri.html
+++ b/perkenalan diri.html
@@ -92,7 +92,7 @@
     <h2>📚 Tugas Semester 1</h2>
     <ul>
       <li>Tugas Semester 1 Arendra :
-        <a href="arendra.html">Klik di sini</a>
+        <a href="https://fajardwiaffandi-glitch.github.io/KKA-X-S2/arendra.html">Klik di sini</a>
       </li>
       <li>Tugas Semester 1 Fajar :
         <a href="fajar s1.html">Klik di sini</a>
@@ -164,6 +164,7 @@
 </body>
 
 </html>
+
 
 
 
