--- a/perkenalan diri.html
+++ b/perkenalan diri.html
@@ -23,9 +23,9 @@
       background: white;
       border: 2px solid #000;
       border-radius: 10px;
-      width: 250px;
+      width: 320px;
       margin: 10px;
-      padding: 15px;
+      padding: 30px 20px;
       box-shadow: 2px 2px 10px rgba(0,0,0,0.3);
     }
 
@@ -164,6 +164,7 @@
 </body>
 
 </html>
+
 
 
 
